--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
 before_install:
   - docker build -t islamgamal88/multi-con-test -f ./client/Dockerfile ./client
 
-script:
-  - docker run -e CI=true islamgamal88/multi-con-test npm test -- --coverage
+scripts:
+  - docker run -e CI=true islamgamal88/multi-con-test npm run test -- --coverage
 
 after_success:
   - docker build -t islamgamal88/multi-con-client ./client
